[gd_scene load_steps=23 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Monsters/DetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Monsters/WanderingController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Monsters/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Monsters/Boss/Boss2_cardgon.PNG" type="Texture" id=7]
[ext_resource path="res://Monsters/Boss/Cardgon.gd" type="Script" id=8]

[sub_resource type="Animation" id=12]
resource_name = "CardgonAttack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=1]
resource_name = "CardgonIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "CardgonAttack"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "CardgonIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=5]
states/CardgonAttack/node = SubResource( 13 )
states/CardgonAttack/position = Vector2( 755.871, 74 )
states/CardgonIdle/node = SubResource( 14 )
states/CardgonIdle/position = Vector2( 529.871, 74 )
transitions = [ "CardgonIdle", "CardgonAttack", SubResource( 15 ), "CardgonAttack", "CardgonIdle", SubResource( 16 ) ]
start_node = "CardgonIdle"
graph_offset = Vector2( 106.871, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[sub_resource type="CapsuleShape2D" id=7]
radius = 26.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 42.0
height = 0.0

[sub_resource type="CircleShape2D" id=9]
radius = 160.0

[sub_resource type="CircleShape2D" id=10]
radius = 37.2156

[sub_resource type="CapsuleShape2D" id=11]
radius = 27.0
height = 2.0

[node name="Cardgon" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CardgonAttack = SubResource( 12 )
anims/CardgonIdle = SubResource( 1 )
anims/RESET = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
max_hp = 20
mon_dmg = 2

[node name="DectectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="DectectionZone" index="0"]
modulate = Color( 0.266667, 0.980392, 0.258824, 0.588235 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderingController" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="dead" from="Stats" to="." method="_on_Stats_dead"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="DectectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
